--- a/cicada-web/build.gradle
+++ b/cicada-web/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 
 dependencies {
-    compile project(":cicada-exceptor")
+    compile project(":cicada-exception")
     compileOnly group: 'org.springframework.boot', name: 'spring-boot-starter', version: SPRINGBOOT_VERSION
     annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: SPRINGBOOT_VERSION
     implementation "org.springframework.boot:spring-boot-starter-web:$SPRINGBOOT_VERSION"
