--- a/cicada-test/build.gradle
+++ b/cicada-test/build.gradle
@@ -5,6 +5,8 @@ sourceCompatibility = 1.8
 dependencies {
     compile project(":cicada-exception")
     compile project(":cicada-web")
+//    implementation 'com.github.niceSong.cicada:cicada-web:v1.0.4'
+//    implementation 'com.github.niceSong.cicada:cicada-exception:v1.0.4'
     compileOnly group: 'org.springframework.boot', name: 'spring-boot-starter', version: SPRINGBOOT_VERSION
     annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: SPRINGBOOT_VERSION
     implementation 'org.springframework.boot:spring-boot-starter-web:2.2.5.RELEASE'
