--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,5 @@
 SPRINGBOOT_VERSION=2.2.5.RELEASE
+artifactory_name=Fivegc-maven-rely-local
+artifactory_user=tangyuyao
+artifactory_password=1qaz@WSX
+artifactory_contextUrl=http://artifactory.ebupt.net:8082/artifactory
